# evalis

./: .gitignore  .markdownlint.json  Makefile  Makefile.common  Makefile.gen  README.md  mise.toml
.github/workflows/: bump_version.yml  ci_check.yml  ci_check_set_status.yml  deploy_python.yml  deploy_typescript.yml  tag_version.yml  typescript_pack_and_deploy.yml
docs/: TODO.md  architecture.md  deployment.md  recipes.md  versioning.md
grammar/: Evalis.g4  Fablex.g4  Psyval.g4
python/: .flake8  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.lock.txt
python/src/evalis/: __init__.py  antlr4_adapter.py  ast.py  constants.py  eval.py  evalis.py  types.py  utils.py
python/src/fablex/: __init__.py  __main__.py  antlr4_adapter.py  ast.py  error.py  eval.py  fablex.py  main.py  types.py
python/src/psyval/: ast.py  eval.py  main.py
python/support/: generate.py  get_expression_version.sh  get_version.sh  set_version.py
python/tests/: test_cases.py
support/: bump_subdir_version.sh  check_expression_version_reference.sh  check_generated_makefile.sh  check_readme_version_reference.sh  check_subdir_version.sh  generate_makefile.py  generate_source.py  version_math.sh
support/py_utils/: py_loader.py
test-oracle/: cases.yml
typescript/: .eslintrc.json  .prettierignore  Makefile  README.md  eslint.config.mjs  generate.py  jest.config.js  package-lock.json  package.json
typescript/src/: ast.ts  constants.ts  error.ts  eval.ts  evalis.ts  index.ts  types.ts  utils.ts
typescript/tests/: cases.test.ts
(+2 files in other folders)
